--- a/_attachments/bookmarklet_src_test.html
+++ b/_attachments/bookmarklet_src_test.html
@@ -16,7 +16,7 @@
 			try{
 				if(!b)
 					throw(0);
-				z.setAttribute('src',getCurrentHostURL() + '/paginae/_design/paginae/saving_iframe.html?url='+window.btoa(window.location.href)+'&title='+window.btoa(window.title));
+				z.setAttribute('src',getCurrentHostURL() + '/paginae/_design/paginae/saving_iframe.html?url='+window.btoa(window.location.href)+'&title='+window.btoa(document.title));
 				b.appendChild(z);
 				s=z.style;
 				s.position='fixed';
@@ -33,7 +33,7 @@
 		 * @return the compressed bookmarklet code, based on the current host
 		 */
 		function generateBookmarklet() {
-			return "javascript:(function(){var d=document,z=d.createElement('ifr'+'ame'),b=d.body;try{if(!b)throw(0);z.setAttribute('src','" + getCurrentHostURL() + "/paginae/_design/paginae/saving_iframe.html?url='+window.btoa(window.location.href)+'&title='+window.btoa(window.title));b.appendChild(z);s=z.style;s.position='fixed';s.top=s.left=25;s.width='7em';s.height='3em';setTimeout(function(){b.removeChild(z)},3000);}catch(e){alert('Please%20wait%20until%20the%20page%20has%20loaded.');}})();void(0);";
+			return "javascript:(function(){var d=document,z=d.createElement('ifr'+'ame'),b=d.body;try{if(!b)throw(0);z.setAttribute('src','" + getCurrentHostURL() + "/paginae/_design/paginae/saving_iframe.html?url='+window.btoa(window.location.href)+'&title='+window.btoa(document.title));b.appendChild(z);s=z.style;s.position='fixed';s.top=s.left=25;s.width='7em';s.height='3em';setTimeout(function(){b.removeChild(z)},3000);}catch(e){alert('Please%20wait%20until%20the%20page%20has%20loaded.');}})();void(0);";
 		}
 		</script>
 		<title>Paginae bookmarklet tester</title>
