Adding a simple replicator

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -14,6 +14,7 @@
 		
 		<div id="sidebar">
 			<div id="bookmarklet"></div>
+			<div id="replicator"></div>
 		</div>
 		
 		<div id="main">
@@ -32,6 +33,7 @@
 
 			$("#bookmarklet").evently("bookmarklet", app);
 			$("#linksList").evently("linksList", app);
+			$("#replicator").evently("replicator", app);
     });
   </script>
 
